--- a/main.css
+++ b/main.css
@@ -4,7 +4,8 @@ img {
 
 body, li {
 	color: #373534;
-	font-family: "Lucida Console"
+	font-family: "Lucida Console";
+	background-color: #F0F0F0
 }
 
 h1, h2 {
